[package]
name = "felo_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
thiserror = "1.0.61"
dotenvy = "0.15.7"
futures = "0.3"

